fix(build): resolve type error in create page and actions

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ next-env.d.ts
 
 # Security
 db_setup.js
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
+playwright.config.ts
+tests/
