--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "swiper": "^12.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
