Fix Scenario 3 test hang, implement Validator Step, and improve wallet mocking

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,4 @@ node_modules/
 /playwright/.cache/
 /playwright/.auth/
 playwright.config.ts
-tests/
+# tests/ # Uncommmented to allow committing tests
